--- a/index.html
+++ b/index.html
@@ -311,10 +311,10 @@
                    <img class="three-illustrators" src="./logos/illustrators/illustrator-1.jpg" alt="illustrators">
                 </div>
                  <div>
-                   <img class="three-illustrators" src="/logos/illustrators/illustrator-2.jpg" alt="illustrators">
+                   <img class="three-illustrators" src="./logos/illustrators/illustrator-2.jpg" alt="illustrators">
                  </div>
                  <div>
-                    <img class="three-illustrators" src="/logos/illustrators/illustrator-3.jpg" alt="illustrators">
+                    <img class="three-illustrators" src="./logos/illustrators/illustrator-3.jpg" alt="illustrators">
                  </div>
             </div>
             <div class="second-text">
